// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appendTo appends mounted element to mounted element 1`] = `
<body>
  <div
    id="parent"
  >
    <div
      id="child1"
    >
      <div
        id="child2"
      />
    </div>
  </div>
</body>
`;

exports[`appendTo appends unmounted element to mounted element 1`] = `
<body>
  <div
    id="parent"
  >
    <div
      id="child"
    />
  </div>
</body>
`;

exports[`appendTo does not append mounted element to unmounted element 1`] = `
<body>
  <div
    id="elem2"
  />
</body>
`;

exports[`appendTo does not append unmounted element to unmounted element 1`] = `
<body>
  <div
    id="elem2"
  />
</body>
`;

exports[`appendTo throws an error when appending element to itself 1`] = `
<body>
  <div
    id="elem"
  />
</body>
`;

exports[`appendTo throws an error when appending parent to its child 1`] = `
<body>
  <div
    id="parent"
  >
    <div
      id="child"
    />
  </div>
</body>
`;
